@@ -151,6 +151,18 @@
 <td><p>[degree]</p></td>
 <td><p>sensor zenith angle at the observation point</p></td>
 </tr>
+<tr class="row-odd"><td><p><strong>CO2_column_volume_mixing_ratio</strong></p></td>
+<td><p>double</p></td>
+<td><p>{<em>time</em>}</p></td>
+<td><p>[ppmv]</p></td>
+<td><p>CO2 column volume mixing ratio</p></td>
+</tr>
+<tr class="row-even"><td><p><strong>CO2_column_volume_mixing_ratio_uncertainty</strong></p></td>
+<td><p>double</p></td>
+<td><p>{<em>time</em>}</p></td>
+<td><p>[ppmv]</p></td>
+<td><p>uncertainty of the CO2 column volume mixing ratio</p></td>
+</tr>
 <tr class="row-odd"><td><p><strong>CO2_column_number_density</strong></p></td>
 <td><p>double</p></td>
 <td><p>{<em>time</em>}</p></td>
@@ -224,15 +236,26 @@
 <td><p><em>path</em></p></td>
 <td><p><strong>/Data/geolocation/satelliteZenith[]</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>CO2_column_number_density</strong></p></td>
+<tr class="row-odd"><td><p><strong>CO2_column_volume_mixing_ratio</strong></p></td>
+<td><p><em>path</em></p></td>
+<td><p><strong>/Data/mixingRatio/XCO2</strong></p></td>
+</tr>
+<tr class="row-even"><td rowspan="2"><p><strong>CO2_column_volume_mixing_ratio_uncertainty</strong></p></td>
+<td><p><em>path</em></p></td>
+<td><p><strong>/Data/mixingRatio/XCO2SmoothingError, /Data/mixingRatio/XCO2RetrievalNoise, /Data/mixingRatio/XCO2InterferenceError, /Data/mixingRatio/XCO2ExternalNoise</strong></p></td>
+</tr>
+<tr class="row-odd"><td><p><em>description</em></p></td>
+<td><p>the uncertainty returned is the sum of all four error components</p></td>
+</tr>
+<tr class="row-even"><td><p><strong>CO2_column_number_density</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/Data/totalColumn/CO2TotalColumn</strong></p></td>
 </tr>
-<tr class="row-even"><td rowspan="2"><p><strong>CO2_column_number_density_uncertainty</strong></p></td>
+<tr class="row-odd"><td rowspan="2"><p><strong>CO2_column_number_density_uncertainty</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/Data/totalColumn/CO2TotalColumnSmoothingError, /Data/totalColumn/CO2TotalColumnRetrievalNoise, /Data/totalColumn/CO2TotalColumnInterferenceError, /Data/totalColumn/CO2TotalColumnExternalNoise</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><em>description</em></p></td>
+<tr class="row-even"><td><p><em>description</em></p></td>
 <td><p>the uncertainty returned is the sum of all four error components</p></td>
 </tr>
 </tbody>
